# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

buildconfig = "//BUILDCONFIG.gn"

default_args = {
  # Default args used for python virtual environment and in //BUILD.gn
  pw_build_PYTHON_BUILD_VENV = "//:project_build_venv"

  pw_build_PIP_CONSTRAINTS = [
    "//third_party/pigweed/pw_env_setup/py/pw_env_setup/virtualenv_setup/constraint.list",
  ]

  pw_build_PIP_REQUIREMENTS = [ "//third_party/pigweed/pw_env_setup/py/pw_env_setup/virtualenv_setup/pigweed_upstream_requirements.txt" ]
}
