import("//build_overrides/pigweed.gni")
import("$dir_pw_build/python.gni")

pw_python_package("tools") {
  setup = [
    "pyproject.toml",
    "setup.cfg",
    "setup.py",
  ]

  # Placeholder. Add python scripts for plugins here.
  sources = [
    "pw_plugins/__init__.py",
    "pw_plugins/presubmit_checks.py",
  ]

  python_deps = [
    "$dir_pw_cli/py",
    "$dir_pw_presubmit/py",
    "$dir_pw_watch/py",
  ]

  pylintrc = "$dir_pigweed/.pylintrc"
}
