[metadata]
name = project_tools
version = 0.0.1
description = Project pyhton packages for Pigweed plugins

[options]
packages = find:
zip_safe = False
install_requires =
    compiledb

[options.entry_points]
console_scripts =
    find-files = project_tools.find_files:main

[options.package_data]
project_tools =
    pw.typed